--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-remark-prismjs": "^1.2.17",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-remark": "^1.7.36",
+    "gh-pages": "^1.2.0",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "react-helmet": "^5.2.0",
@@ -32,7 +33,8 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop -o"
+    "dev": "gatsby develop -o",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
